Feat(back);finishquest (#46)
* fix filtre pas utile

* gros push clean fichier

* mettre au propre le swagger

* finish quest

* fix

* fix rebase
